# shuffle_test

./: CMakeLists.txt  README.md  conanfile.txt
src/: CMakeLists.txt  api.cpp  cuda_dj.cu  eqcuda.cu  eqcuda.hpp  main.cpp  mtm_solver.cu  mtm_solver.h  old_stuff.h  param.h  round address.txt  shuffle_test.cu  shuffle_test.h  shuffle_test.sln  shuffle_test.vcxproj  sols.cpp  sols.h  st_cuda_context.hpp  v1.h  v1_round1.h  working_old_shuffle.txt
src/crypto/: blake.hpp
src/crypto/detail/: blake.hpp
src/stratum/: amount.hpp  client.hpp  hash.hpp  serialize.hpp  solver_stub.hpp  speed.hpp  streams.hpp  tinyformat.hpp  utils.hpp  version.hpp  zcash_job.hpp  zcash_miner.hpp  zcash_stratum.hpp
src/stratum/arith/: arith_uint256.hpp  uint252.hpp  uint256.hpp  utilstrencodings.hpp
src/stratum/arith/detail/: uint256.hpp  utilstrencodings.hpp
src/stratum/compat/: byteswap.hpp  endian.hpp
src/stratum/config/: bitcoin-config.hpp.cmake
src/stratum/crypto/: common.hpp  ripemd160.hpp  sha256.hpp
src/stratum/crypto/detail/: ripemd160.hpp  sha256.hpp
src/stratum/detail/: benchmark.hpp  zcashthread.hpp
src/stratum/json/: json_spirit_error_position.hpp  json_spirit_reader_template.hpp  json_spirit_utils.hpp  json_spirit_value.hpp
src/stratum/primitives/: block.hpp  transaction.hpp
src/stratum/script/: script.hpp
src/stratum/script/detail/: script.hpp
src/stratum/support/allocators/: zeroafterfree.hpp
src/stratum/zcash/: address.hpp  incremental_merkle_tree.hpp  join_split.hpp  note.hpp  note_encryption.hpp  proof.hpp  zcash.hpp
src/stratum/zcash/circuit/: commitment.tcc  gadget.tcc  merkle.tcc  note.tcc  prfs.tcc  utils.tcc
src/stratum/zcash/detail/: proof.hpp
